--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -547,6 +547,79 @@
    "metadata": {},
    "source": [
     "There are no empty values on our database, so it's not necessary to remove lines from our dataframe. But we can see in the DataType of our columns that there are some columns fullfilled with strings, and our AI Model is not able to work with pure text, just with numbers. So, we'll need to convert this strings into numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                    Non-Null Count   Dtype  \n",
+      "---  ------                    --------------   -----  \n",
+      " 0   id_cliente                100000 non-null  int64  \n",
+      " 1   mes                       100000 non-null  int64  \n",
+      " 2   idade                     100000 non-null  float64\n",
+      " 3   profissao                 100000 non-null  int32  \n",
+      " 4   salario_anual             100000 non-null  float64\n",
+      " 5   num_contas                100000 non-null  float64\n",
+      " 6   num_cartoes               100000 non-null  float64\n",
+      " 7   juros_emprestimo          100000 non-null  float64\n",
+      " 8   num_emprestimos           100000 non-null  float64\n",
+      " 9   dias_atraso               100000 non-null  float64\n",
+      " 10  num_pagamentos_atrasados  100000 non-null  float64\n",
+      " 11  num_verificacoes_credito  100000 non-null  float64\n",
+      " 12  mix_credito               100000 non-null  int32  \n",
+      " 13  divida_total              100000 non-null  float64\n",
+      " 14  taxa_uso_credito          100000 non-null  float64\n",
+      " 15  idade_historico_credito   100000 non-null  float64\n",
+      " 16  investimento_mensal       100000 non-null  float64\n",
+      " 17  comportamento_pagamento   100000 non-null  int32  \n",
+      " 18  saldo_final_mes           100000 non-null  float64\n",
+      " 19  score_credito             100000 non-null  object \n",
+      " 20  emprestimo_carro          100000 non-null  int64  \n",
+      " 21  emprestimo_casa           100000 non-null  int64  \n",
+      " 22  emprestimo_pessoal        100000 non-null  int64  \n",
+      " 23  emprestimo_credito        100000 non-null  int64  \n",
+      " 24  emprestimo_estudantil     100000 non-null  int64  \n",
+      "dtypes: float64(14), int32(3), int64(7), object(1)\n",
+      "memory usage: 17.9+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "encoder=LabelEncoder() \n",
+    "\n",
+    "for column in df.columns: \n",
+    "    if df[column].dtype=='object' and column!='score_credito':\n",
+    "        df[column]=encoder.fit_transform(df[column])\n",
+    "\n",
+    "\n",
+    "display(df.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we can see that all our columns are fullfilled with numbers, except the credit score column, that will be used as a parameter for our comparisons."
    ]
   }
  ],
