--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -600,19 +600,405 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_cliente</th>\n",
+       "      <th>mes</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>profissao</th>\n",
+       "      <th>salario_anual</th>\n",
+       "      <th>num_contas</th>\n",
+       "      <th>num_cartoes</th>\n",
+       "      <th>juros_emprestimo</th>\n",
+       "      <th>num_emprestimos</th>\n",
+       "      <th>dias_atraso</th>\n",
+       "      <th>...</th>\n",
+       "      <th>idade_historico_credito</th>\n",
+       "      <th>investimento_mensal</th>\n",
+       "      <th>comportamento_pagamento</th>\n",
+       "      <th>saldo_final_mes</th>\n",
+       "      <th>score_credito</th>\n",
+       "      <th>emprestimo_carro</th>\n",
+       "      <th>emprestimo_casa</th>\n",
+       "      <th>emprestimo_pessoal</th>\n",
+       "      <th>emprestimo_credito</th>\n",
+       "      <th>emprestimo_estudantil</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19114.12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>21.465380</td>\n",
+       "      <td>1</td>\n",
+       "      <td>312.494089</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19114.12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>266.0</td>\n",
+       "      <td>21.465380</td>\n",
+       "      <td>3</td>\n",
+       "      <td>284.629162</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>3</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19114.12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>267.0</td>\n",
+       "      <td>21.465380</td>\n",
+       "      <td>5</td>\n",
+       "      <td>331.209863</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>4</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19114.12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>268.0</td>\n",
+       "      <td>21.465380</td>\n",
+       "      <td>4</td>\n",
+       "      <td>223.451310</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19114.12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>269.0</td>\n",
+       "      <td>21.465380</td>\n",
+       "      <td>2</td>\n",
+       "      <td>341.489231</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>37932</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39628.99</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>378.0</td>\n",
+       "      <td>24.028477</td>\n",
+       "      <td>0</td>\n",
+       "      <td>479.866228</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>37932</td>\n",
+       "      <td>5</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39628.99</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>379.0</td>\n",
+       "      <td>24.028477</td>\n",
+       "      <td>2</td>\n",
+       "      <td>496.651610</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>37932</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39628.99</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>24.028477</td>\n",
+       "      <td>0</td>\n",
+       "      <td>516.809083</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>37932</td>\n",
+       "      <td>7</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39628.99</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>381.0</td>\n",
+       "      <td>24.028477</td>\n",
+       "      <td>3</td>\n",
+       "      <td>319.164979</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>37932</td>\n",
+       "      <td>8</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39628.99</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>382.0</td>\n",
+       "      <td>24.028477</td>\n",
+       "      <td>2</td>\n",
+       "      <td>393.673696</td>\n",
+       "      <td>Poor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id_cliente  mes  idade  profissao  salario_anual  num_contas  \\\n",
+       "0            3392    1   23.0          2       19114.12         3.0   \n",
+       "1            3392    2   23.0          2       19114.12         3.0   \n",
+       "2            3392    3   23.0          2       19114.12         3.0   \n",
+       "3            3392    4   23.0          2       19114.12         3.0   \n",
+       "4            3392    5   23.0          2       19114.12         3.0   \n",
+       "...           ...  ...    ...        ...            ...         ...   \n",
+       "99995       37932    4   25.0         11       39628.99         4.0   \n",
+       "99996       37932    5   25.0         11       39628.99         4.0   \n",
+       "99997       37932    6   25.0         11       39628.99         4.0   \n",
+       "99998       37932    7   25.0         11       39628.99         4.0   \n",
+       "99999       37932    8   25.0         11       39628.99         4.0   \n",
+       "\n",
+       "       num_cartoes  juros_emprestimo  num_emprestimos  dias_atraso  ...  \\\n",
+       "0              4.0               3.0              4.0          3.0  ...   \n",
+       "1              4.0               3.0              4.0          3.0  ...   \n",
+       "2              4.0               3.0              4.0          3.0  ...   \n",
+       "3              4.0               3.0              4.0          5.0  ...   \n",
+       "4              4.0               3.0              4.0          6.0  ...   \n",
+       "...            ...               ...              ...          ...  ...   \n",
+       "99995          6.0               7.0              2.0         23.0  ...   \n",
+       "99996          6.0               7.0              2.0         18.0  ...   \n",
+       "99997          6.0               7.0              2.0         27.0  ...   \n",
+       "99998          6.0               7.0              2.0         20.0  ...   \n",
+       "99999          6.0               7.0              2.0         18.0  ...   \n",
+       "\n",
+       "       idade_historico_credito  investimento_mensal  comportamento_pagamento  \\\n",
+       "0                        265.0            21.465380                        1   \n",
+       "1                        266.0            21.465380                        3   \n",
+       "2                        267.0            21.465380                        5   \n",
+       "3                        268.0            21.465380                        4   \n",
+       "4                        269.0            21.465380                        2   \n",
+       "...                        ...                  ...                      ...   \n",
+       "99995                    378.0            24.028477                        0   \n",
+       "99996                    379.0            24.028477                        2   \n",
+       "99997                    380.0            24.028477                        0   \n",
+       "99998                    381.0            24.028477                        3   \n",
+       "99999                    382.0            24.028477                        2   \n",
+       "\n",
+       "       saldo_final_mes  score_credito  emprestimo_carro  emprestimo_casa  \\\n",
+       "0           312.494089           Good                 1                1   \n",
+       "1           284.629162           Good                 1                1   \n",
+       "2           331.209863           Good                 1                1   \n",
+       "3           223.451310           Good                 1                1   \n",
+       "4           341.489231           Good                 1                1   \n",
+       "...                ...            ...               ...              ...   \n",
+       "99995       479.866228           Poor                 1                0   \n",
+       "99996       496.651610           Poor                 1                0   \n",
+       "99997       516.809083           Poor                 1                0   \n",
+       "99998       319.164979       Standard                 1                0   \n",
+       "99999       393.673696           Poor                 1                0   \n",
+       "\n",
+       "       emprestimo_pessoal  emprestimo_credito emprestimo_estudantil  \n",
+       "0                       1                   1                     0  \n",
+       "1                       1                   1                     0  \n",
+       "2                       1                   1                     0  \n",
+       "3                       1                   1                     0  \n",
+       "4                       1                   1                     0  \n",
+       "...                   ...                 ...                   ...  \n",
+       "99995                   0                   0                     1  \n",
+       "99996                   0                   0                     1  \n",
+       "99997                   0                   0                     1  \n",
+       "99998                   0                   0                     1  \n",
+       "99999                   0                   0                     1  \n",
+       "\n",
+       "[100000 rows x 25 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "encoder=LabelEncoder() \n",
-    "\n",
     "for column in df.columns: \n",
     "    if df[column].dtype=='object' and column!='score_credito':\n",
-    "        df[column]=encoder.fit_transform(df[column])\n",
+    "        df[column]=LabelEncoder().fit_transform(df[column])\n",
     "\n",
     "\n",
-    "display(df.info())"
+    "display(df.info())\n",
+    "\n",
+    "display(df)"
    ]
   },
   {
@@ -620,6 +1006,63 @@
    "metadata": {},
    "source": [
     "Now, we can see that all our columns are fullfilled with numbers, except the credit score column, that will be used as a parameter for our comparisons."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we need to create two variables: The first one corresponds to the column with the results we want to predict. This one is going to be the column with the credit scores. And the second variable is the one with the columns we're going to send to our AI model, so it can use them to predict the credit score. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=df['score_credito']\n",
+    "x=df.drop(['score_credito', 'id_cliente'], axis=1) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So with the correct data in our hands, let's split it between test and training data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split \n",
+    "\n",
+    "\n",
+    "x_train, x_test, y_train, y_test=train_test_split(x, y, test_size=0.3, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After that, we will choose two Machine Learning models to be trained and see wich one will give us the best accuracy. For this project, we'll choose Forest Classifier and Nearest Neighbors models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "\n",
+    "model_forest=RandomForestClassifier.fit(x_train, y_train)\n",
+    "model_neighbor=KNeighborsClassifier.fit(x_train, y_train)"
    ]
   }
  ],
