--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,8 +1061,8 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "\n",
-    "model_forest=RandomForestClassifier.fit(x_train, y_train)\n",
-    "model_neighbor=KNeighborsClassifier.fit(x_train, y_train)"
+    "model_forest=RandomForestClassifier().fit(x_train, y_train)\n",
+    "model_neighbor=KNeighborsClassifier().fit(x_train, y_train)"
    ]
   }
  ],
