--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,6 +1063,89 @@
     "\n",
     "model_forest=RandomForestClassifier().fit(x_train, y_train)\n",
     "model_neighbor=KNeighborsClassifier().fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we need to check the accuracy of our two models, and see how each of them perform. But first, we need to calculate the base accuracy that shows the minimum ratio of accuracy our AI/ML models have to show. As the example below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The base accuracy for our models is 53.174%'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "count_scores=df['score_credito'].value_counts()\n",
+    "\n",
+    "baseaccuracy=(count_scores['Standard']/sum(count_scores))*100\n",
+    "\n",
+    "display(f'The base accuracy for our models is {baseaccuracy}%')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, our models need to have a minimum accuracy of 53.17% when classifying a customer with \"Standard\" as a credit score. We always need to set our base accuracy with the value that appears the most (\"Standard\", in our case). Then, we need to calculate the real accuracy of our models:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Random Forest Model Accuracy:0.8238666666666666'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Neighbor Model Accuracy:0.7324'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "predict_forest=model_forest.predict(x_test)\n",
+    "predict_neighbor=model_neighbor.predict(x_test)\n",
+    "\n",
+    "forest_accuracy=accuracy_score(y_test, predict_forest)\n",
+    "neighbor_accuracy=accuracy_score(y_test, predict_neighbor)\n",
+    "\n",
+    "display(f'Random Forest Model Accuracy:{forest_accuracy}')\n",
+    "\n",
+    "display(f'Neighbor Model Accuracy:{neighbor_accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, it's clear that the model with the best accuracy is the Random Forest Model, with almost 82.4% of accuracy."
    ]
   }
  ],
