--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1105,13 +1105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Random Forest Model Accuracy:0.8238666666666666'"
+       "'Random Forest Model Accuracy:0.8258333333333333'"
       ]
      },
      "metadata": {},
@@ -1146,6 +1146,188 @@
    "metadata": {},
    "source": [
     "So, it's clear that the model with the best accuracy is the Random Forest Model, with almost 82.4% of accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To complete our study, we will also see wich informations have the most importance on the credit score result, based on our model analysis. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mes</th>\n",
+       "      <td>3.943630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>idade</th>\n",
+       "      <td>4.221721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>profissao</th>\n",
+       "      <td>3.273861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>salario_anual</th>\n",
+       "      <td>5.078992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>num_contas</th>\n",
+       "      <td>3.588578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>num_cartoes</th>\n",
+       "      <td>4.643873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>juros_emprestimo</th>\n",
+       "      <td>8.207203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>num_emprestimos</th>\n",
+       "      <td>2.991359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dias_atraso</th>\n",
+       "      <td>6.414970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>num_pagamentos_atrasados</th>\n",
+       "      <td>4.469873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>num_verificacoes_credito</th>\n",
+       "      <td>4.855689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mix_credito</th>\n",
+       "      <td>8.572704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>divida_total</th>\n",
+       "      <td>11.111599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>taxa_uso_credito</th>\n",
+       "      <td>5.054720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>idade_historico_credito</th>\n",
+       "      <td>7.463680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>investimento_mensal</th>\n",
+       "      <td>4.845643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>comportamento_pagamento</th>\n",
+       "      <td>2.354528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>saldo_final_mes</th>\n",
+       "      <td>5.395784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>emprestimo_carro</th>\n",
+       "      <td>0.703547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>emprestimo_casa</th>\n",
+       "      <td>0.734569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>emprestimo_pessoal</th>\n",
+       "      <td>0.698751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>emprestimo_credito</th>\n",
+       "      <td>0.691663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>emprestimo_estudantil</th>\n",
+       "      <td>0.683065</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  0\n",
+       "mes                        3.943630\n",
+       "idade                      4.221721\n",
+       "profissao                  3.273861\n",
+       "salario_anual              5.078992\n",
+       "num_contas                 3.588578\n",
+       "num_cartoes                4.643873\n",
+       "juros_emprestimo           8.207203\n",
+       "num_emprestimos            2.991359\n",
+       "dias_atraso                6.414970\n",
+       "num_pagamentos_atrasados   4.469873\n",
+       "num_verificacoes_credito   4.855689\n",
+       "mix_credito                8.572704\n",
+       "divida_total              11.111599\n",
+       "taxa_uso_credito           5.054720\n",
+       "idade_historico_credito    7.463680\n",
+       "investimento_mensal        4.845643\n",
+       "comportamento_pagamento    2.354528\n",
+       "saldo_final_mes            5.395784\n",
+       "emprestimo_carro           0.703547\n",
+       "emprestimo_casa            0.734569\n",
+       "emprestimo_pessoal         0.698751\n",
+       "emprestimo_credito         0.691663\n",
+       "emprestimo_estudantil      0.683065"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "columns=list(x_test.columns)\n",
+    "importance=pd.DataFrame(index=columns, data=model_forest.feature_importances_)\n",
+    "importance=importance*100\n",
+    "display(importance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SO we got that the most important data for our credit score results are: \n",
+    "\n",
+    "1. Total debt owed by the customer (divida_total)\n",
+    "2. Variety of credit accounts held by the customer (mix_credito)\t\n",
+    "3. Length of credit history of the customer (idade_historico_credito)"
    ]
   }
  ],
