--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1105,13 +1105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Random Forest Model Accuracy:0.8258333333333333'"
+       "'Random Forest Model Accuracy:0.8256333333333333'"
       ]
      },
      "metadata": {},
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1187,95 +1187,95 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>mes</th>\n",
-       "      <td>3.943630</td>\n",
+       "      <td>3.949814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>idade</th>\n",
-       "      <td>4.221721</td>\n",
+       "      <td>4.280342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>profissao</th>\n",
-       "      <td>3.273861</td>\n",
+       "      <td>3.293795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>salario_anual</th>\n",
-       "      <td>5.078992</td>\n",
+       "      <td>5.136161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>num_contas</th>\n",
-       "      <td>3.588578</td>\n",
+       "      <td>3.580269</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>num_cartoes</th>\n",
-       "      <td>4.643873</td>\n",
+       "      <td>4.316639</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>juros_emprestimo</th>\n",
-       "      <td>8.207203</td>\n",
+       "      <td>8.180286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>num_emprestimos</th>\n",
-       "      <td>2.991359</td>\n",
+       "      <td>3.026212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>dias_atraso</th>\n",
-       "      <td>6.414970</td>\n",
+       "      <td>6.121983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>num_pagamentos_atrasados</th>\n",
-       "      <td>4.469873</td>\n",
+       "      <td>4.543014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>num_verificacoes_credito</th>\n",
-       "      <td>4.855689</td>\n",
+       "      <td>4.993686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mix_credito</th>\n",
-       "      <td>8.572704</td>\n",
+       "      <td>8.341847</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>divida_total</th>\n",
-       "      <td>11.111599</td>\n",
+       "      <td>11.841484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>taxa_uso_credito</th>\n",
-       "      <td>5.054720</td>\n",
+       "      <td>5.021834</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>idade_historico_credito</th>\n",
-       "      <td>7.463680</td>\n",
+       "      <td>7.243717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>investimento_mensal</th>\n",
-       "      <td>4.845643</td>\n",
+       "      <td>4.823400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>comportamento_pagamento</th>\n",
-       "      <td>2.354528</td>\n",
+       "      <td>2.364484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>saldo_final_mes</th>\n",
-       "      <td>5.395784</td>\n",
+       "      <td>5.405340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>emprestimo_carro</th>\n",
-       "      <td>0.703547</td>\n",
+       "      <td>0.712356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>emprestimo_casa</th>\n",
-       "      <td>0.734569</td>\n",
+       "      <td>0.724441</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>emprestimo_pessoal</th>\n",
-       "      <td>0.698751</td>\n",
+       "      <td>0.702244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>emprestimo_credito</th>\n",
-       "      <td>0.691663</td>\n",
+       "      <td>0.703355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>emprestimo_estudantil</th>\n",
-       "      <td>0.683065</td>\n",
+       "      <td>0.693298</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1283,29 +1283,29 @@
       ],
       "text/plain": [
        "                                  0\n",
-       "mes                        3.943630\n",
-       "idade                      4.221721\n",
-       "profissao                  3.273861\n",
-       "salario_anual              5.078992\n",
-       "num_contas                 3.588578\n",
-       "num_cartoes                4.643873\n",
-       "juros_emprestimo           8.207203\n",
-       "num_emprestimos            2.991359\n",
-       "dias_atraso                6.414970\n",
-       "num_pagamentos_atrasados   4.469873\n",
-       "num_verificacoes_credito   4.855689\n",
-       "mix_credito                8.572704\n",
-       "divida_total              11.111599\n",
-       "taxa_uso_credito           5.054720\n",
-       "idade_historico_credito    7.463680\n",
-       "investimento_mensal        4.845643\n",
-       "comportamento_pagamento    2.354528\n",
-       "saldo_final_mes            5.395784\n",
-       "emprestimo_carro           0.703547\n",
-       "emprestimo_casa            0.734569\n",
-       "emprestimo_pessoal         0.698751\n",
-       "emprestimo_credito         0.691663\n",
-       "emprestimo_estudantil      0.683065"
+       "mes                        3.949814\n",
+       "idade                      4.280342\n",
+       "profissao                  3.293795\n",
+       "salario_anual              5.136161\n",
+       "num_contas                 3.580269\n",
+       "num_cartoes                4.316639\n",
+       "juros_emprestimo           8.180286\n",
+       "num_emprestimos            3.026212\n",
+       "dias_atraso                6.121983\n",
+       "num_pagamentos_atrasados   4.543014\n",
+       "num_verificacoes_credito   4.993686\n",
+       "mix_credito                8.341847\n",
+       "divida_total              11.841484\n",
+       "taxa_uso_credito           5.021834\n",
+       "idade_historico_credito    7.243717\n",
+       "investimento_mensal        4.823400\n",
+       "comportamento_pagamento    2.364484\n",
+       "saldo_final_mes            5.405340\n",
+       "emprestimo_carro           0.712356\n",
+       "emprestimo_casa            0.724441\n",
+       "emprestimo_pessoal         0.702244\n",
+       "emprestimo_credito         0.703355\n",
+       "emprestimo_estudantil      0.693298"
       ]
      },
      "metadata": {},
@@ -1323,11 +1323,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SO we got that the most important data for our credit score results are: \n",
+    "So we got that the most important data for our credit score results are: \n",
     "\n",
     "1. Total debt owed by the customer (divida_total)\n",
     "2. Variety of credit accounts held by the customer (mix_credito)\t\n",
     "3. Length of credit history of the customer (idade_historico_credito)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's all the information that we have about our AI model and the PI will have them to decide if their current customer base has a behavior that will make providing credit services profitable to the company. Based on that, it will be possible to analyze if this is going to be good or bad to the PI."
    ]
   }
  ],
